--- a/blog-post.html
+++ b/blog-post.html
@@ -107,7 +107,7 @@
                      <div class="swiper-slide">
                         <div class="header-bottom-col-wrap">
                            <span><img src="images/header-btm-icon1.svg" alt=""></span>
-                           <div class="header-bottom-text">100% Satisfaction Guaranteed</div>
+                           <div class="header-bottom-text">100% Satisfaction<br> Guaranteed</div>
                         </div>
                      </div>
                      <div class="swiper-slide">
