--- a/project-estimates.html
+++ b/project-estimates.html
@@ -142,7 +142,6 @@
          </div>
       </header>
 
-
       <section class="project-estimates-sec">
          <div class="congratulations-top">
             <div class="congratulations-notice">
@@ -155,8 +154,8 @@
          <div class="project-estimates-list">
             <div class="container">
                <ul>
-                  <li class="active"><a href="#">My Estimates</a></li>
-                  <li><a href="#">Summary</a></li>
+                  <li class="active"><a href="project-estimates.html">My Estimates</a></li>
+                  <li><a href="project-summery.html">Summary</a></li>
                </ul>
             </div>
          </div>
