--- a/project-summery.html
+++ b/project-summery.html
@@ -20,6 +20,7 @@
       <link rel="stylesheet" href="style.css">
    </head>
    <body>
+      
       <header class="main-head">
          <div class="header-top">
             <div class="container large_container">
@@ -162,66 +163,75 @@
             </div>
             <div class="project-estimates-list project-summery-list">
                <ul>
-                  <li><a href="#">My Estimates</a></li>
-                  <li class="active"><a href="#">Summary</a></li>
+                  <li><a href="project-estimates.html">My Estimates</a></li>
+                  <li class="active"><a href="project-summery.html">Summary</a></li>
                </ul>
             </div>
             <div class="add-product-list">
-               <div class="add-product-list-hd">
-                  <div class="add-product-list-hd-left">
-                     <p>Your Project | <span>55.5 SF</span></p>
-                  </div>
-                  <div class="add-product-list-hd-right">
-                     <ul>
-                        <li><span><img src="images/edit.svg" alt=""></span><a href="#">Edit</a></li>
-                        <li><span><img src="images/reset.svg" alt=""></span><a href="#">Reset</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="add-product-list-wrap">
-                  <div class="add-product-list-row">
-                     <div class="add-product-list-col">
-                        <div class="add-product-list-col-item">
-                           <div class="add-product-list-col-item-hd">
-                              <label>Kitchen <b>| 23.2 SF</b></label>
-                           </div>
-                           <div class="add-product-item-flex">
-                              <div class="add-product-item-img">
-                                 <img src="images/kitchen1.png" alt="">
-                              </div>
-                              <div class="add-product-item-text">
-                                 <div class="add-product-item-text-wrap">
-                                    <p>Silestone Charcoal Soapstone | Installed Quartz Countertops Polished Finish | 2cm Thickness</p>
-                                    <a href="#" class="btn-area-details">Area Details</a>
-                                 </div>
-                                 <a href="#" class="cmn-btn"><img src="images/edit.svg" alt=""> Edit Selection</a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="add-product-list-col">
-                        <div class="add-product-list-col-item">
-                           <div class="add-product-list-col-item-hd">
-                              <label>Bathroom <b>| 20.2 SF</b></label>
-                           </div>
-                           <div class="add-product-item-flex">
-                              <div class="add-product-item-img">
-                                 <img src="images/kitchen2.png" alt="">
-                              </div>
-                              <div class="add-product-item-text">
-                                 <div class="add-product-item-text-wrap">
-                                    <p>Silestone Charcoal Soapstone | Installed Quartz Countertops Polished Finish | 2cm Thickness</p>
-                                    <a href="#" class="btn-area-details">Area Details</a>
-                                 </div>
-                                 <a href="#" class="cmn-btn"><img src="images/edit.svg" alt=""> Edit Selection</a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
 
+               <div class="cards-sec-top">
+                  <div class="add-product-list-hd">
+                     <div class="add-product-list-hd-left">
+                        <p>Your Project | <span>55.5 SF</span></p>
+                     </div>
+                     <div class="add-product-list-hd-right">
+                        <ul>
+                           <li><span><img src="images/edit.svg" alt=""></span><a href="#">Edit</a></li>
+                           <li><span><img src="images/reset.svg" alt=""></span><a href="#">Reset</a></li>
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="add-product-list-wrap">
+                     <div class="add-product-list-row">
+                        <div class="add-product-list-col">
+                           <div class="add-product-list-col-item">
+                              <div class="add-product-list-col-item-hd">
+                                 <label>Kitchen | <b>23.2 SF</b></label>
+                              </div>
+                              <div class="add-product-item-flex">
+                                 <div class="add-product-item-img">
+                                    <img src="images/kitchen1.png" alt="">
+                                 </div>
+                                 <div class="add-product-item-text">
+                                    <div class="add-product-item-text-wrap">
+                                       <p>Silestone Charcoal Soapstone | Installed Quartz Countertops Polished Finish | 2cm Thickness</p>
+                                       <a href="#" class="btn-area-details">Area Details</a>
+                                    </div>
+                                    <a href="#" class="cmn-btn"><img src="images/edit.svg" alt=""> Edit Selection</a>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="add-product-list-col">
+                           <div class="add-product-list-col-item">
+                              <div class="add-product-list-col-item-hd">
+                                 <label>Bathroom | <b> 20.2 SF</b></label>
+                              </div>
+                              <div class="add-product-item-flex">
+                                 <div class="add-product-item-img">
+                                    <img src="images/kitchen2.png" alt="">
+                                 </div>
+                                 <div class="add-product-item-text">
+                                    <div class="add-product-item-text-wrap">
+                                       <p>Silestone Charcoal Soapstone | Installed Quartz Countertops Polished Finish | 2cm Thickness</p>
+                                       <a href="#" class="btn-area-details">Area Details</a>
+                                    </div>
+                                    <a href="#" class="cmn-btn"><img src="images/edit.svg" alt=""> Edit Selection</a>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+
+            </div>
+         </div>
+         <img src="images/project-summery-img-overlay.jpeg" class="project-estimates-img-overl" alt="">
+      </section>
+
+      <section class="cards-compare">
+         <div class="container">
             <div class="cards-sec">
                <div class="cards">
                   <div class="cards-hd">
@@ -296,7 +306,7 @@
                </div>
 
                <div class="cards">
-                  <div class="cards-hd">
+                  <div class="cards-hd cards-hd-mrg">
                      <h3>Shop Best Value</h3>
                   </div>
                   <div class="cards-overlay-bg">
@@ -336,7 +346,7 @@
                            </div>
                            <div class="crad-item">
                               <div class="crad-col">
-                                 <div class="crad-img"><img src="images/cd-5.png" alt=""></div>
+                                 <div class="crad-img"><img src="images/cd-7.png" alt=""></div>
                                  <div class="crad-text">
                                     <a href="#" class="btn-compare-price">Compare Price</a>
                                  </div>
@@ -344,7 +354,7 @@
                            </div>
                            <div class="crad-item">
                               <div class="crad-col">
-                                 <div class="crad-img"><img src="images/cd-6.png" alt=""></div>
+                                 <div class="crad-img"><img src="images/cd-8.png" alt=""></div>
                                  <div class="crad-text">
                                     <a href="#" class="btn-compare-price">Compare Price</a>
                                  </div>
@@ -357,7 +367,7 @@
                </div>
 
                <div class="cards">
-                  <div class="cards-hd">
+                  <div class="cards-hd cards-hd-mrg">
                      <h3>Shop Trending Styles</h3>
                   </div>
                   <div class="cards-overlay-bg">
@@ -397,7 +407,7 @@
                            </div>
                            <div class="crad-item">
                               <div class="crad-col">
-                                 <div class="crad-img"><img src="images/cd-5.png" alt=""></div>
+                                 <div class="crad-img"><img src="images/cd-9.png" alt=""></div>
                                  <div class="crad-text">
                                     <a href="#" class="btn-compare-price">Compare Price</a>
                                  </div>
@@ -405,7 +415,7 @@
                            </div>
                            <div class="crad-item">
                               <div class="crad-col">
-                                 <div class="crad-img"><img src="images/cd-6.png" alt=""></div>
+                                 <div class="crad-img"><img src="images/cd-10.png" alt=""></div>
                                  <div class="crad-text">
                                     <a href="#" class="btn-compare-price">Compare Price</a>
                                  </div>
@@ -418,10 +428,7 @@
                </div>
 
             </div>
-
-
          </div>
-         <img src="images/project-summery-img-overlay.jpeg" class="project-estimates-img-overl" alt="">
       </section>
 
       <footer class="main_footer">
