--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
       <link rel="stylesheet" href="style.css">
    </head>
    <body>
@@ -1021,6 +1022,7 @@
             </div>
          </div>
       </section>
+      
       <footer class="main_footer">
          <div class="footr_top">
             <div class="container">
@@ -1117,9 +1119,11 @@
             </div>
          </div>
       </footer>
+
       <!-- Jquery-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
       <script src="js/common.js"></script>
    </body>
 </html>
