today-updated-file

--- a/project-summery.html
+++ b/project-summery.html
@@ -227,7 +227,8 @@
 
             </div>
          </div>
-         <img src="images/project-summery-img-overlay.jpeg" class="project-estimates-img-overl" alt="">
+         <img src="images/project-summery-img-overlay.jpeg" class="project-estimates-img-overl project-sum-dsk" alt="">
+         <img src="images/project-summery-mobile-overlay.png" class="project-estimates-img-overl project-sum-mobile" alt="">
       </section>
 
       <section class="cards-compare">
