--- a/search-result.html
+++ b/search-result.html
@@ -133,102 +133,106 @@
             </div>
          </div>
       </header>
+
       <div class="search-result">
          <div class="container large_container">
-            <div class="search-result-wrap">
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd1.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Quartz</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd2.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Granite</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd3.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Marble</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd4.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Quartzite</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd5.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Kitchen</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd6.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Outdoor</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd7.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Lorem ipsum</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd8.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Lorem ipsum</p>
-                     </div>
-                  </a>
-               </div>
-               <div class="search-result-col">
-                  <a href="#" class="search-result-link">
-                     <div class="search-result-img">
-                        <img src="images/result-cd9.png" alt="">
-                     </div>
-                     <div class="search-result-cont">
-                        <p>Lorem ipsum</p>
-                     </div>
-                  </a>
+            <div class="swiper js-search-result">
+               <div class="swiper-wrapper">
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd1.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Quartz</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd2.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Granite</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd3.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Marble</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd4.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Quartzite</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd5.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Kitchen</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd6.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Outdoor</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd7.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Lorem ipsum</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd8.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Lorem ipsum</p>
+                        </div>
+                     </a>
+                  </div>
+                  <div class="search-result-col swiper-slide">
+                     <a href="#" class="search-result-link">
+                        <div class="search-result-img">
+                           <img src="images/result-cd9.png" alt="">
+                        </div>
+                        <div class="search-result-cont">
+                           <p>Lorem ipsum</p>
+                        </div>
+                     </a>
+                  </div>
                </div>
             </div>
          </div>
       </div>
+
       <section class="search-result-banner">
          <div class="container large_container">
             <div class="result-banner-content">
